--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "flux-crud-sample",
-  "version": "0.0.1",
-  "description": "A sample CRUD page by Flux",
-  "main": "app.js",
+  "name": "alt-react-router-example",
+  "version": "1.0.0",
+  "description": "Starter for React projects",
+  "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/gulp"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp liveserver"
   },
-  "author": "hieubm",
-  "license": "MIT",
+  "author": "Paul Myburgh",
+  "license": "ISC",
   "devDependencies": {
-    "flux": "^2.0.3",
-    "gulp": "^3.8.11",
-    "gulp-notify": "^2.2.0",
-    "react": "^0.13.3",
-    "reactify": "^1.1.1",
-    "browserify": "^10.2.1",
-    "watchify": "^3.2.1",
-    "underscore": "^1.8.3"
+    "del": "^1.1.0",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-notify": "^2.0.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-webpack": "^1.2.0",
+    "jsx-loader": "^0.12.2",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.2"
   },
   "dependencies": {
-    "jquery": "^2.1.4",
-    "object-assign": "^4.0.1",
-    "superagent": "^1.3.0",
-    "vinyl-source-stream": "^1.1.0"
+    "alt": "^0.16.7",
+    "bootstrap": "^3.3.6",
+    "node-libs-browser": "^0.5.2",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "webpack": "^1.9.10"
   }
 }
