--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.6",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
+    "react-bootstrap-confirm": "^1.0.1",
     "react-router": "^0.13.3",
     "webpack": "^1.9.10"
   }
