--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^3.3.5",
     "express": "^4.12.4",
     "jquery": "^2.1.4",
-    "mongoose": "^4.0.5",
+    "mongoose": "^4.4.6",
+    "mongoose-search-plugin": "^0.1.2",
+    "mongoose-text-search": "0.0.2",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "traceur": "0.0.90",
